@@ -27,7 +27,7 @@ THE SOFTWARE.
   <parent>
     <artifactId>pom</artifactId>
     <groupId>org.jenkins-ci.main</groupId>
-    <version>1.405-SNAPSHOT</version>
+    <version>1.406-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jenkins-ci.main</groupId>
@@ -64,7 +64,7 @@ THE SOFTWARE.
             <configuration>
               <fork>true</fork>
               <concurrency>${concurrency}</concurrency>
-              <argLine>-XX:MaxPermSize=192m -Xmx256m -Dfile.encoding=UTF-8</argLine>
+              <argLine>-Dfile.encoding=UTF-8</argLine>
               <systemProperties>
                 <property>
                   <!-- use AntClassLoader that supports predictable file handle release -->
@@ -152,7 +152,7 @@ THE SOFTWARE.
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>jetty</artifactId>
-      <version>6.1.11</version>
+      <version>6.1.26</version>
     </dependency>
     <dependency>
       <groupId>org.jvnet.hudson</groupId>
@@ -176,9 +176,9 @@ THE SOFTWARE.
       <version>1.0-beta-1</version>
     </dependency-->
     <dependency>
-      <groupId>org.jvnet.hudson</groupId>
+      <groupId>org.jenkins-ci</groupId>
       <artifactId>htmlunit</artifactId>
-      <version>2.6-hudson-2</version>
+      <version>2.6-jenkins-3</version>
       <exclusions>
       	<exclusion>
 	      	<!--  hides JDK DOM classes in Eclipse -->
